CPU Docker user fix
Execute build.sh on CICD to verify everything builds


Mount volume before build.sh CICD


CICD Fix

--- a/.github/workflows/docker-images-main.yml
+++ b/.github/workflows/docker-images-main.yml
@@ -33,13 +33,28 @@ jobs:
         username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    - name: Build and optionally push image
+    - name: Build and Load image
       uses: docker/build-push-action@v6
       with:
         context: .
         file: Docker/dev/Dockerfile
         platforms: linux/amd64
-        push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        load: true
+        push: false
+        tags: mcgillrobotics/auv_2026:dev-amd64
+
+    - name: Verify Build
+      run: |
+        docker run --rm -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:dev-amd64 /bin/bash -c "./build.sh"
+
+    - name: Push image
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: Docker/dev/Dockerfile
+        platforms: linux/amd64
+        push: true
         tags: mcgillrobotics/auv_2026:dev-amd64
 
   build-nvidia-x86:
@@ -64,13 +79,30 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and optionally push NVIDIA image
+      - name: Build and Load NVIDIA image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Docker/dev/Dockerfile.nvidia
           platforms: linux/amd64
-          push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+          load: true
+          push: false
+          tags: mcgillrobotics/auv_2026:dev-nvidia-amd64
+
+      - name: Verify Build
+        run: |
+          # Use --gpus all if available, or just run without if runner has no GPU
+          # Verification focuses on build success, not runtime execution
+          docker run --rm -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:dev-nvidia-amd64 /bin/bash -c "./build.sh"
+
+      - name: Push NVIDIA image
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Docker/dev/Dockerfile.nvidia
+          platforms: linux/amd64
+          push: true
           tags: mcgillrobotics/auv_2026:dev-nvidia-amd64
 
   build-arm:
@@ -95,13 +127,28 @@ jobs:
         username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    - name: Build and optionally push image
+    - name: Build and Load image
       uses: docker/build-push-action@v6
       with:
         context: .
         file: Docker/dev/Dockerfile
         platforms: linux/arm64
-        push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        load: true
+        push: false
+        tags: mcgillrobotics/auv_2026:dev-arm64
+
+    - name: Verify Build
+      run: |
+        docker run --rm --platform linux/arm64 -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:dev-arm64 /bin/bash -c "./build.sh"
+
+    - name: Push image
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: Docker/dev/Dockerfile
+        platforms: linux/arm64
+        push: true
         tags: mcgillrobotics/auv_2026:dev-arm64
 
   build-jetson:
@@ -129,11 +176,26 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build and optionally push image
+    - name: Build and Load image
       uses: docker/build-push-action@v6
       with:
         context: Docker/jetson
         file: Docker/jetson/Dockerfile
         platforms: linux/arm64
-        push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        load: true
+        push: false
+        tags: mcgillrobotics/auv_2026:jetson
+
+    - name: Verify Build
+      run: |
+        docker run --rm --platform linux/arm64 -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:jetson /bin/bash -c "./build.sh"
+
+    - name: Push image
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      uses: docker/build-push-action@v6
+      with:
+        context: Docker/jetson
+        file: Docker/jetson/Dockerfile
+        platforms: linux/arm64
+        push: true
         tags: mcgillrobotics/auv_2026:jetson
