--- a/.devcontainer/cpu/devcontainer.json
+++ b/.devcontainer/cpu/devcontainer.json
@@ -4,9 +4,9 @@
     "service": "cpu",
     "runServices": ["cpu"],
 
-    // Use /home/ros instead of /root to follow standard Linux permissions
-    "workspaceFolder": "/home/ros/AUV-2026",
-    "remoteUser": "ros",
+    // Use /home/douglas instead of /root to follow standard Linux permissions
+    "workspaceFolder": "/home/douglas/AUV-2026",
+    "remoteUser": "douglas",
     
     // This is vital for connecting to Unity on Windows/Mac
     // It maps localhost:10000 (Container) -> localhost:10000 (Host)
@@ -35,5 +35,5 @@
         }
     },
 
-    "postCreateCommand": "sudo chown -R ros:ros /home/ros/AUV-2026",
+    "postCreateCommand": "sudo chown -R douglas:douglas /home/douglas/AUV-2026",
 }
