--- a/Docker/dev/Dockerfile
+++ b/Docker/dev/Dockerfile
@@ -131,6 +131,16 @@ RUN groupmod --gid $USER_GID --new-name $USERNAME ros \
     && groupadd -f -r render \
     && usermod -aG video,render -s /bin/bash $USERNAME
 
+# Install fixuid for dynamic UID/GID remapping at runtime
+# This allows the container to match the host user's UID when running with --user
+ARG FIXUID_VERSION=0.6.0
+RUN ARCH="$(dpkg --print-architecture)" && \
+    curl -fsSL "https://github.com/boxboat/fixuid/releases/download/v${FIXUID_VERSION}/fixuid-${FIXUID_VERSION}-linux-${ARCH}.tar.gz" | tar -C /usr/local/bin -xzf - && \
+    chown root:root /usr/local/bin/fixuid && \
+    chmod 4755 /usr/local/bin/fixuid && \
+    mkdir -p /etc/fixuid && \
+    printf "user: $USERNAME\ngroup: $USERNAME\n" > /etc/fixuid/config.yml
+
 USER $USERNAME
 
 WORKDIR /home/$USERNAME/AUV-2026
@@ -138,6 +148,9 @@ WORKDIR /home/$USERNAME/AUV-2026
 # Add source commands to bashrc
 RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash" >> ~/.bashrc && \
     echo "if [ -f ~/AUV-2026/ros2_ws/install/setup.bash ]; then source ~/AUV-2026/ros2_ws/install/setup.bash; fi" >> ~/.bashrc
+
+# Entrypoint uses fixuid to remap UID/GID if running with --user
+ENTRYPOINT ["fixuid", "-q"]
 
 # Keep container alive
 CMD ["bash"]
