--- a/.github/workflows/docker-images-main.yml
+++ b/.github/workflows/docker-images-main.yml
@@ -187,7 +187,7 @@ jobs:
     - name: Build and Load image
       uses: docker/build-push-action@v6
       with:
-        context: Docker/jetson
+        context: .
         file: Docker/jetson/Dockerfile
         platforms: linux/arm64
         load: true
@@ -202,7 +202,7 @@ jobs:
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       uses: docker/build-push-action@v6
       with:
-        context: Docker/jetson
+        context: .
         file: Docker/jetson/Dockerfile
         platforms: linux/arm64
         push: true
