--- a/Docker/jetson/docker-compose.yml
+++ b/Docker/jetson/docker-compose.yml
@@ -30,7 +30,9 @@ services:
         source: ../../../AUV-2026
         target: /home/douglas/AUV-2026
     command: bash -c ${OVERRIDE_COMMAND:-"tail -f /dev/null"}
-    build: .
+    build:
+      context: ../../
+      dockerfile: Docker/jetson/Dockerfile
     deploy:
       resources:
         reservations:
