Refactor launch file installation paths and update quaternion variable names for clarity. Added bringup folder

--- a/ros2_ws/src/controls/CMakeLists.txt
+++ b/ros2_ws/src/controls/CMakeLists.txt
@@ -69,7 +69,7 @@ install(DIRECTORY include/
   DESTINATION include)
 
 install(DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME})
+  DESTINATION share/${PROJECT_NAME}/launch)
 
 install(PROGRAMS
   scripts/depth_controller.py
