--- a/ros2_ws/src/sensors/CMakeLists.txt
+++ b/ros2_ws/src/sensors/CMakeLists.txt
@@ -57,7 +57,7 @@ install(TARGETS
 
 install(DIRECTORY
         launch/
-        DESTINATION share/${PROJECT_NAME})
+        DESTINATION share/${PROJECT_NAME}/launch)
 
 install(DIRECTORY 
         params/
