Added user permissions to use IMU

--- a/Docker/jetson/Dockerfile
+++ b/Docker/jetson/Dockerfile
@@ -266,11 +266,11 @@ RUN if getent group $USER_GID; then \
     else \
     groupadd --gid $USER_GID $USERNAME; \
     fi \
-    # 2. Create the user
+    # 2. Create the user, dialout is IMU driver permissions
     && useradd --uid $USER_UID --gid $USER_GID -m -s /bin/bash $USERNAME \
     && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
     && chmod 0440 /etc/sudoers.d/$USERNAME \
-    && usermod -aG video,render -s /bin/bash $USERNAME
+    && usermod -aG video,render,dialout -s /bin/bash $USERNAME 
 
 # Install fixuid for dynamic UID/GID remapping at runtime
 ARG FIXUID_VERSION=0.6.0
@@ -292,7 +292,7 @@ WORKDIR /home/$USERNAME/AUV-2026
 
 # Source env variables
 # We use /opt/dependencies_ws which is readable by all
-RUN echo "source /opt/ros/humble/setup.bash && source /opt/dependencies_ws/install/setup.bash && source /home/$USERNAME/AUV-2026/ros2_ws/install/setup.bash" >> ~/.bashrc
+RUN echo "source /opt/ros/humble/setup.bash && source /opt/dependencies_ws/install/setup.bash && source /home/$USERNAME/AUV-2026/ros2_ws/install/setup.bash" >> ~/.bashrc 
 
 # Entrypoint uses fixuid to remap UID/GID if running with --user
 ENTRYPOINT ["fixuid", "-q"]
