--- a/ros2_ws/src/vision/package.xml
+++ b/ros2_ws/src/vision/package.xml
@@ -19,6 +19,7 @@
   <build_depend>auv_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>eigen3_cmake_module</build_depend>
 
   <exec_depend>rclpy</exec_depend>
@@ -27,6 +28,7 @@
   <exec_depend>auv_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>eigen3_cmake_module</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
