--- a/.github/workflows/docker-images-main.yml
+++ b/.github/workflows/docker-images-main.yml
@@ -26,6 +26,8 @@ jobs:
           submodules: recursive    # if you vendor msgs/firmware/etc
           lfs: true
 
+    - uses: ./.github/actions/cleanup_disk
+
     - name: Login to DockerHub
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v3
@@ -45,7 +47,7 @@ jobs:
 
     - name: Verify Build
       run: |
-        docker run --rm --user $(id -u):$(id -g) -e CI=true -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:dev-amd64 /bin/bash -c "./build.sh"
+        docker run --rm --user $(id -u):$(id -g) -e CI=true -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:dev-amd64 /bin/bash -c "./build.sh -d"
 
     - name: Push image
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -72,6 +74,8 @@ jobs:
           submodules: recursive
           lfs: true
 
+      - uses: ./.github/actions/cleanup_disk
+
       - name: Login to DockerHub
         if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
@@ -91,7 +95,7 @@ jobs:
 
       - name: Verify Build
         run: |
-          docker run --rm --user $(id -u):$(id -g) -e CI=true -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:dev-nvidia-amd64 /bin/bash -c "./build.sh"
+          docker run --rm --user $(id -u):$(id -g) -e CI=true -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:dev-nvidia-amd64 /bin/bash -c "./build.sh -d"
 
       - name: Push NVIDIA image
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -118,6 +122,8 @@ jobs:
           submodules: recursive    # if you vendor msgs/firmware/etc
           lfs: true
 
+    - uses: ./.github/actions/cleanup_disk
+
     - name: Login to DockerHub
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v3
@@ -137,7 +143,7 @@ jobs:
 
     - name: Verify Build
       run: |
-        docker run --rm --user $(id -u):$(id -g) -e CI=true --platform linux/arm64 -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:dev-arm64 /bin/bash -c "./build.sh"
+        docker run --rm --user $(id -u):$(id -g) -e CI=true --platform linux/arm64 -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:dev-arm64 /bin/bash -c "./build.sh -d"
 
     - name: Push image
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -157,22 +163,14 @@ jobs:
       packages: write
 
     steps:
-    - name: Clean up unnecessary packages to maximize build space
-      run: |
-        echo "=== Disk space before cleanup ==="
-        df -h
-        # Remove unnecessary tools to free space for large Jetson image
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache
-        sudo docker image prune -af || true
-        echo "=== Disk space after cleanup ==="
-        df -h
-
     - name: Git checkout with LFS and submodules
       uses: actions/checkout@v4
       with:
           fetch-tags: true
           submodules: recursive    # if you vendor msgs/firmware/etc
           lfs: true
+
+    - uses: ./.github/actions/cleanup_disk
 
     - name: Log in to Docker Hub
       if: github.ref == 'refs/heads/main'
@@ -196,7 +194,7 @@ jobs:
 
     - name: Verify Build
       run: |
-        docker run --rm --user $(id -u):$(id -g) -e CI=true --platform linux/arm64 -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:jetson /bin/bash -c "./build.sh"
+        docker run --rm --user $(id -u):$(id -g) -e CI=true --platform linux/arm64 -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:jetson /bin/bash -c "./build.sh -d"
 
     - name: Push image
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
