--- a/ros2_ws/src/controls/CMakeLists.txt
+++ b/ros2_ws/src/controls/CMakeLists.txt
@@ -68,7 +68,7 @@ install(TARGETS
 install(DIRECTORY include/
   DESTINATION include)
 
-install(DIRECTORY launch
+install(DIRECTORY launch/
   DESTINATION share/${PROJECT_NAME}/launch)
 
 install(PROGRAMS
