--- a/ros2_ws/src/vision/model_pipeline/.gitignore
+++ b/ros2_ws/src/vision/model_pipeline/.gitignore
@@ -1,9 +1,9 @@
 # Datasets - too large for git
 data/
 
-# Training runs and model weights
-runs/
-*.pt
+# Training runs and model weights: actually don't
+#runs/
+#*.pt
 
 # Temp files
 __pycache__/
