Added controls config files, preliminary tuning of attittude controller

--- a/ros2_ws/src/controls/CMakeLists.txt
+++ b/ros2_ws/src/controls/CMakeLists.txt
@@ -71,6 +71,9 @@ install(DIRECTORY include/
 install(DIRECTORY launch/
   DESTINATION share/${PROJECT_NAME}/launch)
 
+install(DIRECTORY params/
+  DESTINATION share/${PROJECT_NAME}/params)
+
 install(PROGRAMS
   scripts/depth_controller.py
   DESTINATION lib/${PROJECT_NAME}
