--- a/.github/workflows/docker-images-main.yml
+++ b/.github/workflows/docker-images-main.yml
@@ -68,6 +68,31 @@ jobs:
 
       - uses: ./.github/actions/cleanup_disk
 
+      - name: Set Docker Tags
+        id: docker_tags
+        run: |
+          # 1. Determine the base tag (manual input or default 'dev')
+          BASE_TAG="${{ github.event.inputs.tag_name }}"
+          TAG_NAME="${BASE_TAG:-dev}"
+          
+          # 2. Define the image name
+          IMAGE="mcgillrobotics/auv_2026"
+          
+          # 3. Create the primary tag string (used for verification)
+          PRIMARY_TAG="$IMAGE:$TAG_NAME-${{ matrix.suffix }}"
+          
+          # 4. Create the list of tags to push
+          # Start with the primary tag
+          TAGS="$PRIMARY_TAG"
+          
+          # If this is a push to main, append the 'latest' tag
+          if [[ "${{ github.ref }}" == "refs/heads/main" && "${{ github.event_name }}" == "push" ]]; then
+            TAGS="$TAGS,$IMAGE:latest-${{ matrix.suffix }}"
+          fi
+          
+          echo "PRIMARY_TAG=$PRIMARY_TAG" >> $GITHUB_ENV
+          echo "DOCKER_TAGS=$TAGS" >> $GITHUB_ENV
+
       - name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -79,10 +104,12 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
         shell: bash
         run: |
-          FULL_TAG="mcgillrobotics/auv_2026:${{ inputs.tag_name }}-${{ matrix.suffix }}"
-          ALLOW_OVERWRITE="${{ inputs.allow_overwrite }}"
+          FULL_TAG="${{ env.PRIMARY_TAG }}"
+          ALLOW_OVERWRITE="${{ github.event.inputs.allow_overwrite }}"
           
           # Check if tag exists on Docker Hub
+          # Note: This check only validates the PRIMARY tag to avoid accidental overwrite of explicit version.
+          # We generally don't check 'latest' here as it is intended to move.
           if docker manifest inspect "$FULL_TAG" > /dev/null 2>&1; then
             if [ "$ALLOW_OVERWRITE" = "true" ]; then
               echo "::warning::Tag '$FULL_TAG' already exists. Overwrite is ENABLED. Proceeding with building."
@@ -94,8 +121,8 @@ jobs:
             echo "Tag '$FULL_TAG' does not exist. Proceeding with building."
           fi
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
       - name: Build and Load image
         uses: docker/build-push-action@v6
@@ -105,11 +132,11 @@ jobs:
           platforms: ${{ matrix.platform }}
           load: true
           push: false
-          tags: mcgillrobotics/auv_2026:${{ inputs.tag_name || 'dev' }}-${{ matrix.suffix }}
+          tags: ${{ env.PRIMARY_TAG }}
 
       - name: Verify Build
         run: |
-          docker run --rm --user $(id -u):$(id -g) -e CI=true -v ${{ github.workspace }}:/home/douglas/AUV-2026 mcgillrobotics/auv_2026:${{ inputs.tag_name || 'dev' }}-${{ matrix.suffix }} /bin/bash -c "./build.sh -d"
+          docker run --rm --user $(id -u):$(id -g) -e CI=true -v ${{ github.workspace }}:/home/douglas/AUV-2026 ${{ env.PRIMARY_TAG }} /bin/bash -c "./build.sh -d"
 
       - name: Push image
         if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
@@ -119,4 +146,4 @@ jobs:
           file: ${{ matrix.file }}
           platforms: ${{ matrix.platform }}
           push: true
-          tags: mcgillrobotics/auv_2026:${{ inputs.tag_name || 'dev' }}-${{ matrix.suffix }}
+          tags: ${{ env.DOCKER_TAGS }}
