--- a/Docker/dev/Dockerfile.nvidia
+++ b/Docker/dev/Dockerfile.nvidia
@@ -101,6 +101,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         ros-${ROS_DISTRO}-mavros-msgs \
         ros-${ROS_DISTRO}-marine-sensor-msgs \
         ros-${ROS_DISTRO}-marine-acoustic-msgs \
+        ros-${ROS_DISTRO}-vision-msgs \
         # Visualization Tools
         ros-${ROS_DISTRO}-rqt-image-view \
         ros-${ROS_DISTRO}-rqt-graph \
